--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <nav class="main-nav">
         <span class="menu-icon-close"><i class="fa fa-times" aria-hidden="true"></i></span>
         <ul>
-          <li><a href="{{site.baseurl}}/">Blog</a></li>
+          <li><a href="{{site.baseurl}}/">Blog1</a></li>
           <li><a href="{{site.baseurl}}/about">About</a></li>
         </ul>
       </nav>
