--- a/adam-blog/_includes/header.html
+++ b/adam-blog/_includes/header.html
@@ -7,8 +7,9 @@
       <nav class="main-nav">
         <span class="menu-icon-close"><i class="fa fa-times" aria-hidden="true"></i></span>
         <ul>
-          <li><a href="{{site.baseurl}}/">Blog1</a></li>
+          <li><a href="{{site.baseurl}}/blog">Blog</a></li>
           <li><a href="{{site.baseurl}}/about">About</a></li>
+		  <li><a href="{{site.baseurl}}/about1">About1</a></li>
         </ul>
       </nav>
       <p class="logo"><a href="{{site.baseurl}}/">{{ site.author }}</a></p>
