--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,10 @@
 	<div class="footer-social">
 		<div class="footer-container clearfix">
 			<div class="social-list">
-				<a class="social github" target="blank" href="mailto:leach.chen@gmail.com">Email</a>
-				<a class="social github" target="blank" href="https://github.com/leach-chen">GitHub</a>
-				<a class="social github" target="blank" href="https://www.jianshu.com/users/5cc3aae52717/timeline">简书</a>
-				<a class="social github" target="blank" href="https://juejin.im/user/581b4a3e2e958a0054d47b57/collections">掘金</a>
-				<a class="social github" target="blank" href="http://blog.csdn.net/chenliqiang12345678">Csdn</a>
+				<a class="social github" target="blank" href="{{site.github}}">GitHub</a>
+				<a class="social github" target="blank" href="{{site.jianshu}}">简书</a>
+				<a class="social github" target="blank" href="{{site.juejin}}">掘金</a>
+				<a class="social github" target="blank" href="{{site.csdn}}">Csdn</a>
 			</div>
 		</div>
 	</div>
