--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -912,7 +912,7 @@ pre code {
 }
 
 .main-header .logo {
-  width: 50%;
+  /*width: 50%;*/
   text-align: center;
 }
 
@@ -1773,11 +1773,9 @@ pre code {
 
 
 /*底部链接*/
-.footer-social{border-bottom:1px solid rgba(184,197,214,.2);    box-shadow: 0 -2px 8px 0 rgba(239, 241, 243, 0.59);}
-.footer-social .footer-container{max-width:940px;margin:0 auto;}
-.footer-social .social-list{padding:20px;text-align:center;}
+.footer-social{border-bottom:1px solid rgba(184,197,214,.2);    box-shadow: 0 -2px 8px 0 rgba(239, 241, 243, 0.59);text-align:center;padding-top:10px;padding-bottom:10px;}
 .footer-social .social-list a{font-size:13px;padding:0 25px;text-decoration:none;color:#5f5f5f;}
-.footer-meta{padding:50px 0 0;list-style:none;}
+
 
 
 
@@ -1995,7 +1993,7 @@ pre code {
   text-decoration: none;
   font-size: 1.75rem;
   -webkit-border-radius: 0.3rem;
-          border-radius: 0.3rem;
+  border-radius: 0.3rem;
   background-color: #262626;
   -webkit-transition: all .35s ease-in-out;
   transition: all .35s ease-in-out;
@@ -2047,3 +2045,72 @@ pre code {
 .post-card:hover .post-card-image{
    transform: scale(1.4);  
 }
+
+.search-icon{
+	float:right;
+}
+
+
+.header{line-height:78px;position:fixed;z-index:10;top:0;display:block;width:100%;height:80px;padding:0;text-align:right;-webkit-box-shadow:0 1px 5px rgba(0,0,0,.1);-moz-box-shadow:0 1px 5px rgba(0,0,0,.1);box-shadow:0 1px 5px rgba(0,0,0,.1);}
+.header.animated{-webkit-animation-duration:.5s;animation-duration:.5s;-webkit-animation-fill-mode:both;animation-fill-mode:both;}
+.header.animated.slideUp{-webkit-animation-name:slideUp;animation-name:slideUp;}
+.header.animated.slideDown{-webkit-animation-name:slideDown;animation-name:slideDown;}
+
+.navbar-container{position:relative;max-width:100%;width:30%;text-align:right}
+
+.navbar-menu{z-index:10;display:inline-block;width:auto;padding-right:5px;float:right;}
+.navbar-menu a{font-size:14px;padding:0 15px;text-decoration: none;}
+.navbar-mobile-menu{z-index:1;display:none;width:28px;padding:0 45px 0 10px;cursor:pointer;float:right;}
+.navbar-mobile-menu:active,.navbar-mobile-menu:hover{cursor:pointer;}
+.navbar-mobile-menu:active:before,.navbar-mobile-menu:hover:before{-webkit-animation:pointer-ball .3s ease 1;animation:pointer-ball .3s ease 1;-webkit-animation-timing-function:cubic-bezier(.61,.04,.17,1.32);animation-timing-function:cubic-bezier(.61,.04,.17,1.32);}
+.navbar-mobile-menu:active .icon-menu,.navbar-mobile-menu:hover .icon-menu{-webkit-transform:rotateZ(360deg);-ms-transform:rotateZ(360deg);transform:rotateZ(360deg);}
+.navbar-mobile-menu:active .icon-menu.cross .middle,.navbar-mobile-menu:active .icon-menu.cross:after,.navbar-mobile-menu:active .icon-menu.cross:before,.navbar-mobile-menu:hover .icon-menu.cross .middle,.navbar-mobile-menu:hover .icon-menu.cross:after,.navbar-mobile-menu:hover .icon-menu.cross:before{background:#eb5055;}
+.navbar-mobile-menu:active .icon-menu.cross .middle,.navbar-mobile-menu:hover .icon-menu.cross .middle{opacity:0;}
+.navbar-mobile-menu:active .icon-menu.cross:after,.navbar-mobile-menu:hover .icon-menu.cross:after{bottom:5px;-webkit-transform:rotate(135deg);-ms-transform:rotate(135deg);transform:rotate(135deg);}
+.navbar-mobile-menu:active .icon-menu.cross:before,.navbar-mobile-menu:hover .icon-menu.cross:before{top:5px;-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);-webkit-box-shadow:0 0 0 white;box-shadow:0 0 0 white;}
+.navbar-mobile-menu li{position:relative;display:inline;margin:0;text-decoration:none;}
+.navbar-mobile-menu ul{position:absolute;z-index:1;top:100%;overflow:hidden;clip:rect(1px,1px,1px,1px);margin:0 0 0 -95px;padding:0;-webkit-transition:-webkit-transform 300ms;transition:-webkit-transform 300ms;transition:transform 300ms;-webkit-transform:translate(120px,0);-ms-transform:translate(120px,0);transform:translate(120px,0);text-indent:0;}
+.navbar-mobile-menu:hover>ul,.navbar-mobile-menu:active>ul,.navbar-mobile-menu:focus>ul{overflow:inherit;clip:inherit;-webkit-transition:-webkit-transform 300ms;transition:-webkit-transform 300ms;transition:transform 300ms;-webkit-transform:translateX(0px) translateY(0px) translateZ(0px);transform:translateX(0px) translateY(0px) translateZ(0px);}
+.navbar-mobile-menu ul li a{font-size:15px;line-height:2.2;display:block;width:140px;margin:0;padding:8px 25px;background-color:#eee;}
+
+
+
+@media(max-width:650px){
+   .navbar-menu{display:none;}
+   .navbar-search{padding:0 35px 0 0;}
+   .navbar-search form{width:180px;margin-right:55px;}
+   .navbar-mobile-menu{display:inline-block;}
+   .red-gradient{display:none;}
+   .meta-posts{display:none;}
+   .meta-comments{display:none;}
+   .post-page{padding:100px 25px 0;}
+   .common-page .post-list-item{width:100%;padding:10px 20px;}
+   .footer-social{display:none;}
+   .footer-meta .footer-container{height:70px;padding:0 15px;}
+   .footer-meta .meta-item{width:100%;padding:0 10px;}
+   .footer-meta .meta-copyright .info-text{float:right;}
+   .footer-meta .meta-copyright .info-text p{text-align:right;}
+   .post-onelist-item-container .onelist-item-thumb{min-height:220px;}
+   .post-header-thumb{display:none;}
+   .post-page .post-header{display:inherit;}
+   .post-page .post-content .post-tags{display:inherit;}
+}
+
+
+.icon-search{position:relative;z-index:1;display:inline-block;width:13px;height:13px;margin:2px 0 0 3px;-webkit-transform:rotate(-45deg);-ms-transform:rotate(-45deg);transform:rotate(-45deg);color:#313131;border:solid 2px currentColor;border-radius:50%;}
+.icon-search:before{position:absolute;top:11px;left:3px;width:2px;height:4px;content:'';background-color:currentColor;}
+.icon-menu{position:relative;display:inline-block;width:20px;height:12px;-webkit-transition:all .4s ease-in-out;transition:all .4s ease-in-out;-webkit-transition-timing-function:cubic-bezier(.61,.04,.17,1.32);transition-timing-function:cubic-bezier(.61,.04,.17,1.32);}
+.icon-menu .middle{position:absolute;top:50%;left:-.25em;display:inline-block;width:20px;height:2px;margin-top:-1px;-webkit-transition:all .4s ease-in-out;transition:all .4s ease-in-out;background:#313131;}
+.icon-menu:after,.icon-menu:before{position:absolute;left:-.25em;width:20px;height:2px;content:'';-webkit-transition:all .4s ease-in-out;transition:all .4s ease-in-out;-webkit-transform-origin:50% 50% 0;-ms-transform-origin:50% 50% 0;transform-origin:50% 50% 0;background:#313131;}
+.icon-menu:after{bottom:0;}
+.icon-menu:before{top:0;}
+.bg-ico-book{background-position:0 0!important;}
+.bg-ico-game{background-position:0 -40px!important;}
+.bg-ico-note{background-position:0 -80px!important;}
+.bg-ico-chat{background-position:0 -120px!important;}
+.bg-ico-code{background-position:0 -160px!important;}
+.bg-ico-image{background-position:0 -200px!important;}
+.bg-ico-web{background-position:0 -240px!important;}
+.bg-ico-link{background-position:0 -280px!important;}
+.bg-ico-design{background-position:0 -320px!important;}
+.bg-ico-lock{background-position:0 -360px!important;}
