--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-<section class="comment-area">
+<!--><section class="comment-area">
   <div class="comment-wrapper">
     {% if site.discus_identifier %}
     <div id="disqus_thread" class="article-comments"></div>
@@ -14,3 +14,15 @@
     {% endif %}
   </div>
 </section> <!-- End Comment Area -->
+
+<section class="comment-area">
+  <div class="comment-wrapper">
+	<script>
+		var idcomments_acct = '1ce8d80a5f6d373a46f4ceaf3dff8859';
+		var idcomments_post_id;
+		var idcomments_post_url;
+		</script>
+		<span id="IDCommentsPostTitle" style="display:none"></span>
+		<script type='text/javascript' src='https://www.intensedebate.com/js/genericCommentWrapperV2.js'></script>
+	</div>
+</section>
