--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,13 @@
       <nav class="main-nav">
         <span class="menu-icon-close"><i class="fa fa-times" aria-hidden="true"></i></span>
         <ul style="height:800px;overflow-y:scroll;overflow-y:auto;">
-          <li><a href="{{site.baseurl}}/">Blog</a></li>
+		{% assign count = 0 %}
+		 {% for post in paginator.posts %}
+		   {% if post.test%}
+			{% assign count = count | plus: 1 %}
+		  {% endif %}
+		  {% endfor %}
+          <li><a href="{{site.baseurl}}/">Blog({{count}})</a></li>
 		   
           <li style="margin-bottom:200px;"><a href="{{site.baseurl}}/about">About</a></li>
         </ul>
