--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,5 +12,16 @@
 
 	<div class="copyright">
 		<p>{{site.time | date: '%Y'}} &copy; {{site.author}}</p>
+		
+			
+	<div style="font-size:12px;color:#B3B3B3;padding-left:20px;float:right"> 
+		<iframe
+                style="margin-left: 2px; margin-bottom:-5px;"
+                frameborder="0" scrolling="0" width="91px" height="20px"
+                src="https://ghbtns.com/github-btn.html?user=leach-chen&repo=leach-chen.github.io&type=star&count=true" >
+            </iframe>
+		<span id="busuanzi_container_site_pv">本站总访问量：<span id="busuanzi_value_site_pv"></span>次</span>
 	</div>
+	</div>
+
 </footer> <!-- End Footer -->
