--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 		<p>{{site.time | date: '%Y'}} &copy; {{site.author}}</p>
 		
 			
-	<div style="font-size:12px;color:#B3B3B3;padding-left:20px;float:right"> 
+	<div style="font-size:12px;color:#B3B3B3;padding-right:30px;float:right"> 
 		<iframe
                 style="margin-left: 2px; margin-bottom:-5px;"
                 frameborder="0" scrolling="0" width="91px" height="20px"
