--- a/_includes/new-old.html
+++ b/_includes/new-old.html
@@ -5,27 +5,27 @@
               <p><a href="javascript:void(0)" onclick="dashangToggle()" class="dashang" title="打赏，支持一下">打赏一个呗</a></p>
               <div class="hide_box-play"></div>
               <div class="shang_box-play">
-                <a class="shang_close-play" href="javascript:void(0)" onclick="dashangToggle()" title="关闭"><img src="/images/payimg/close.jpg" alt="取消" /></a>
+                <a class="shang_close-play" href="javascript:void(0)" onclick="dashangToggle()" title="关闭"><img src="/assets/img/close.jpg" alt="取消" /></a>
                 <div class="shang_tit-play">
                   <p>感谢您的支持，我会继续努力的!</p>
                 </div>
                 <div class="shang_payimg">
-                    <img src="/images/payimg/alipayimg.jpg" alt="扫码支持" title="扫一扫" />
+                    <img src="/assets/img/alipayimg.jpg" alt="扫码支持" title="扫一扫" />
                 </div>
               <div class="shang_payimg">    
-                    <img src="/images/payimg/weipayimg.jpg" alt="扫码支持" title="扫一扫" />
+                    <img src="/assets/img/wechatimg.jpg" alt="扫码支持" title="扫一扫"/>
                 </div>
-                <div class="pay_explain">扫码打赏，你说多少就多少</div>
+                <div class="pay_explain">扫码打赏,金额随意</div>
                 <div class="shang_payselect">
                   <div class="pay_item checked" data-id="alipay">
-                    <span class="pay_logo"><img src="/images/payimg/alipay.jpg" alt="支付宝" /></span>
+                    <span class="pay_logo"><img src="/assets/img/alipay.jpg" alt="支付宝" /></span>
                   </div>
                   <div class="pay_item" data-id="weipay">
-                    <span class="pay_logo"><img src="/images/payimg/wechat.jpg" alt="微信" /></span>
+                    <span class="pay_logo"><img src="/assets/img/wechat.jpg" alt="微信" /></span>
                   </div>
                 </div>
                 <div class="shang_info-play">
-                  <p>打开<span id="shang_pay_txt">支付宝</span>扫一扫，即可进行扫码打赏哦</p>
+                  <p>打开<span id="shang_pay_txt">支付宝或者微信</span>扫一扫，即可进行扫码打赏哦</p>
                 </div>
               </div>
             </div>
@@ -51,7 +51,7 @@
               .shang_logo{display:block;text-align:center;margin:20px auto;}
               .shang_tit-play{width: 100%;height: 75px;text-align: center;line-height: 66px;color: #a3a3a3;font-size: 16px;background: url('/images/payimg/cy-reward-title-bg.jpg');font-family: 'Microsoft YaHei';margin-top: 7px;margin-right:2px;}
               .shang_tit-play p{color:#a3a3a3;text-align:center;font-size:16px;}
-              .shang_payimg{width:140px;padding:10px;padding-left: 80px; /*border:6px solid #EA5F00;**/margin:0 auto;border-radius:3px;height:140px;display:inline-block;}
+              .shang_payimg{padding:10px;/*border:6px solid #EA5F00;**/margin:0 auto;border-radius:3px;height:140px;display:inline-block;}
               .shang_payimg img{display:inline-block;margin-right:10px;float:left;text-align:center;width:140px;height:140px; }
               .pay_explain{text-align:center;margin:10px auto;font-size:12px;color:#545454;}
               .shang_payselect{text-align:center;margin:0 auto;margin-top:40px;cursor:pointer;height:60px;width:500px;margin-left:110px;}
