--- a/_includes/new-old.html
+++ b/_includes/new-old.html
@@ -9,24 +9,25 @@
                 <div class="shang_tit-play">
                   <p>感谢您的支持，我会继续努力的!</p>
                 </div>
+				
                 <div class="shang_payimg">
                     <img src="/assets/img/alipayimg.jpg" alt="扫码支持" title="扫一扫" />
                 </div>
-              <div class="shang_payimg">    
-                    <img src="/assets/img/wechatimg.jpg" alt="扫码支持" title="扫一扫"/>
-                </div>
-                <div class="pay_explain">扫码打赏,金额随意</div>
-                <div class="shang_payselect">
-                  <div class="pay_item checked" data-id="alipay">
+				
+				 <div class="pay_item checked" data-id="alipay">
                     <span class="pay_logo"><img src="/assets/img/alipay.jpg" alt="支付宝" /></span>
                   </div>
-                  <div class="pay_item" data-id="weipay">
+				  
+				 
+				<div class="shang_payimg">    
+                    <img src="/assets/img/wechatimg.jpg" alt="扫码支持" title="扫一扫"/>
+                </div>
+				
+				 <div class="pay_item" data-id="weipay">
                     <span class="pay_logo"><img src="/assets/img/wechat.jpg" alt="微信" /></span>
                   </div>
-                </div>
-                <div class="shang_info-play">
-                  <p>打开<span id="shang_pay_txt">支付宝或者微信</span>扫一扫，即可进行扫码打赏哦</p>
-                </div>
+                <div class="pay_explain">扫码打赏,金额随意</div>
+               
               </div>
             </div>
             <script type="text/javascript">
@@ -41,7 +42,7 @@
             <style type="text/css">
               .content-play{width:100%;margin-top: 20px;margin-bottom: 10px;height:40px;text-align:center;}
               .hide_box-play{z-index:999;filter:alpha(opacity=50);background:#666;opacity: 0.5;-moz-opacity: 0.5;left:0;top:0;height:99%;width:100%;position:fixed;display:none;}
-              .shang_box-play{width:540px;height:540px;padding:10px;background-color:#fff;border-radius:10px;position:fixed;z-index:1000;left:50%;top:50%;margin-left:-280px;margin-top:-280px;border:1px dotted #dedede;display:none;}
+              .shang_box-play{width:100%;height:540px;padding:10px;background-color:#fff;border-radius:10px;position:fixed;z-index:1000;left:0%;top:50%;margin-left:0px;margin-top:-280px;border:1px dotted #dedede;display:none;}
               .shang_box-play img{border:none;border-width:0;}
               .dashang{width:100px;margin:5px auto;height:25px;line-height:25px;padding:10px;background-color:#E74851;color:#fff;text-align:center;text-decoration:none;border-radius:10px;font-weight:bold;font-size:16px;transition: all 0.3s;}
               .dashang:hover{opacity:0.8;padding:15px;font-size:18px;}
