--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
 	</script>
 	
 	<!--谷歌统计-->
-	<!-- Global site tag (gtag.js) - Google Analytics
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google-analysis }}"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
@@ -46,6 +46,6 @@
 	  gtag('js', new Date());
 
 	  gtag('config', '{{ site.google-analysis }}');
-	</script> -->
+	</script>
 
 </head>
