--- a/_includes/new-old.html
+++ b/_includes/new-old.html
@@ -2,12 +2,12 @@
 			<!--<div style="background:#000;border-bottom: 1px solid #d9d9d9;"></div> -->
 
             <div class="content-play">
-              <p><a href="javascript:void(0)" onclick="dashangToggle()" class="dashang" title="打赏，支持一下">打赏一个呗</a></p>
+              <p><a href="javascript:void(0)" onclick="dashangToggle()" class="dashang" title="打赏，支持一下">打赏一下呗</a></p>
               <div class="hide_box-play"></div>
               <div class="shang_box-play">
                 <a class="shang_close-play" href="javascript:void(0)" onclick="dashangToggle()" title="关闭"><img src="/assets/img/close.jpg" alt="取消" /></a>
                 <div class="shang_tit-play">
-                  <p>感谢您的支持，我会继续努力的!</p>
+                  <p>感谢您的支持!</p>
                 </div>
 				
 				<div class="shang_payimg">    
