--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,9 +15,18 @@
 	<meta name="msapplication-navbutton-color" content="#311e3e">
 	<!-- iOS Safari -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="#311e3e">
-	<!-- Google Fonts -->
+	
+	
+	
+	
+	<!-- Google Fonts 1
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">-->
+	
+	
+	
+	
+	
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
 	<!-- Styles -->
@@ -37,8 +46,14 @@
 		})();
 	</script>
 	
+	
+	
+	
+	
+	
+	
 	<!--谷歌统计-->
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- Global site tag (gtag.js) - Google Analytics 
 	<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google-analysis }}"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
@@ -46,6 +61,6 @@
 	  gtag('js', new Date());
 
 	  gtag('config', '{{ site.google-analysis }}');
-	</script>
+	</script>-->
 
 </head>
