--- a/_includes/new-old.html
+++ b/_includes/new-old.html
@@ -7,7 +7,7 @@
               <div class="shang_box-play">
                 <a class="shang_close-play" href="javascript:void(0)" onclick="dashangToggle()" title="关闭"><img src="/assets/img/close.jpg" alt="取消" /></a>
                 <div class="shang_tit-play">
-                  <p>感谢您的支持!</p>
+                  <p>对你有帮助，那就打赏一下吧</p>
                 </div>
 				
 				<div class="shang_payimg">    
