--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,8 @@
 
 	<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>  
 	
+	<script type="text/javascript" src="//v3.jiathis.com/code/jia.js" charset="utf-8"></script>
+	
 	
 	<!--百度统计-->
 	<script>
