--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,19 +28,19 @@ layout: default
             <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" title="Share on Twitter" rel="nofollow" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
             <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" rel="nofollow" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a>
-			
-			
+						
 			<!-- JiaThis Button BEGIN -->
 			<div class="jiathis_style_32x32">
-				<!--<a class="jiathis_button_qzone"></a>-->
 				<a class="jiathis_button_weixin"></a>
-				<!--<a class="jiathis_button_tqq"></a>-->
 				<a class="jiathis_button_tsina"></a>
-				<!--<a class="jiathis_button_renren"></a>-->
-				<a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
+				<!--<a class="jiathis_button_tqq"></a>
+				<a class="jiathis_button_qzone"></a>
+				<a class="jiathis_button_renren"></a>-->
+				<a href="http://www.jiathis.com/share?uid={{ site.youyan-id }}" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
 				<a class="jiathis_counter_style"></a>
 			</div>
-			<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js" charset="utf-8"></script>
+			<script type="text/javascript">var jiathis_config = {data_track_clickback:'true'};</script>
+			<script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid={{ site.youyan-id }}" charset="utf-8"></script>
 			<!-- JiaThis Button END -->
           </div><!-- End Share -->
 		  
